--- a/versioned_docs/version-3.0/modules/multichain.mdx
+++ b/versioned_docs/version-3.0/modules/multichain.mdx
@@ -168,7 +168,7 @@ let baseAccount = await BiconomySmartAccountV2.create({
 });
 
 let polygonAccount = await BiconomySmartAccountV2.create({
-  chainId: ChainId.POLYGON_MUMBAI,
+  chainId: 80002,
   biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster"
   bundlerUrl: "", // <-- Read about this at https://docs.biconomy.io/dashboard#bundler-url
   defaultValidationModule: multiChainModule,
@@ -221,8 +221,8 @@ let partialUserOp2 = await polygonAccount.buildUserOp([transaction], {
 
 // Use multichain module to sign once for all ops
 const returnedOps = await multiChainModule.signUserOps([
-  { userOp: partialUserOp1, chainId: ChainId.BASE_GOERLI_TESTNET },
-  { userOp: partialUserOp2, chainId: ChainId.POLYGON_MUMBAI },
+  { userOp: partialUserOp1, chainId: 84531 },
+  { userOp: partialUserOp2, chainId: 80002 },
 ]);
 
 const userOpResponse1 = await baseAccount.sendSignedUserOp(
