--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -23,7 +23,7 @@ mkdir biconomy-sa && cd biconomy-sa && npm init -y && npm i --save-dev @types/no
 
 ```
 
-  npm i @biconomy/account
+  npm i @biconomy/account viem
 
 ```
 
