--- a/docs/Modules/abiSessionValidationModule.mdx
+++ b/docs/Modules/abiSessionValidationModule.mdx
@@ -512,14 +512,14 @@ It passes the necessary parameters to **_validateSessionParams**  and returns th
 ## Rules
 
 Rules define permissions for the args of an allowed method.
-With Rules you can precisely define what should be the args of the transaction that is allowed for a given Session.
-Every Rule works with a single static arg or a 32 bytes chunk of the dynamic arg.
+With rules, you can precisely define what should be the args of the transaction that is allowed for a given Session.
+Every Rule works with a single static arg or a 32-byte chunk of the dynamic arg.
 
-Since the ABI Encoding translates every static param into a 32bytes word, even the shorter ones (like `address` or `uint8`), every Rule defines a desired relation (`Condition`) between n-th 32bytes word of the `calldata` and a reference Value (that is obviously a 32bytes word as well).
+Since the ABI Encoding translates every static param into a 32-bytes word, even the shorter ones (like `address` or `uint8`), every Rule defines a desired relation (`Condition`) between n-th 32bytes word of the `calldata` and a reference Value (that is obviously a 32-bytes word as well).
 
 So, when dApp is creating a `_sessionKeyData` to enable a session, it should convert every shorter static arg to a 32bytes word to match how it will be actually ABI encoded in the `userOp.callData`.
 
-For the dynamic args, like `bytes`, every 32bytes word of the `calldata` such as offset of the bytes arg, length of the bytes arg, and n-th 32bytes word of the bytes arg can be controlled by a dedicated Rule.
+For the dynamic args, like `bytes`, every 32-bytes word of the `calldata` such as offset of the bytes arg, length of the bytes arg, and n-th 32-bytes word of the bytes arg can be controlled by a dedicated Rule.
 
 # Offset 
 The offset in the ABI SVM contract helps locate the relevant data within the function call data, it serves as a reference point from which to start reading or extracting specific information required for validation.
