--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -19,7 +19,7 @@ Let's create a [Typescript](https://www.typescriptlang.org) project using npm to
 mkdir biconomy-sa && cd biconomy-sa && npm init -y && npm i --save-dev @types/node tslib
 ```
 
-**🎉 Then add biconomy's account package: 🎉**
+**🎉 Then add biconomy's account package (with viem): 🎉**
 
 ```
 
