feat: utility functions (#267)
* added ABI SVM address + contract breakdown in "Modules" directory

* feat: adds changing user roles section

* small fix

* Replaced Mumbai with Amoy in supportedNetworks for paymaster

* removed matic addr

* Update docs/Modules/abiSessionValidationModule.mdx

Co-authored-by: Nuno Santos <nuno.santos@biconomy.io>

* Update docs/Modules/abiSessionValidationModule.mdx

Co-authored-by: Nuno Santos <nuno.santos@biconomy.io>

* Update docs/Modules/abiSessionValidationModule.mdx

Co-authored-by: Nuno Santos <nuno.santos@biconomy.io>

* Update docs/Modules/abiSessionValidationModule.mdx

Co-authored-by: Nuno Santos <nuno.santos@biconomy.io>

* Update docs/tutorials/sessionkeys/sessionvalidationmodule.md

Co-authored-by: Nuno Santos <nuno.santos@biconomy.io>

* Update docs/tutorials/sessionkeys/sessionvalidationmodule.md

Co-authored-by: Nuno Santos <nuno.santos@biconomy.io>

* utility functions

---------

Co-authored-by: GabiDev <gv@popoo.io>
Co-authored-by: malcodeman <26983729+malcodeman@users.noreply.github.com>
Co-authored-by: Vasile Gabriel Marian <56271768+VGabriel45@users.noreply.github.com>
Co-authored-by: Nuno Santos <nuno.santos@biconomy.io>

--- a/versioned_docs/version-3.0/paymaster/supportedNetworks.mdx
+++ b/versioned_docs/version-3.0/paymaster/supportedNetworks.mdx
@@ -216,17 +216,13 @@ Please note that we will be reviewing DEX activity on each network to determine 
 | WBTC         | Wrapped BTC          | 0x1bfd67037b42cf73acf2047067bd4f2c47d9bfd6 |
 
 
-### Polygon Mumbai 80001
+### Polygon Amoy 80002
 
 | Token symbol | Token name     | Token Address                              |
 | ------------ | -------------- | ------------------------------------------ | 
-| MATIC        | MATIC          | 0xeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee | 
-| WMATIC       | Wrapped MATIC  | 0x9c3c9283d3e44854697cd22d3faa240cfb032889 | 
-| USDC         | USD Coin       | 0xda5289fcaaf71d52a80a254da614a192b693e977 | 
-| USDT         | Tether USD     | 0xeabc4b91d9375796aa4f69cc764a4ab509080a58 | 
-| DAI          | Dai Stablecoin | 0x27a44456bedb94dbd59d0f0a14fe977c777fc5c3 | 
-| SAND         | SAND           | 0xe03489d4e90b22c59c5e23d45dfd59fc0db8a025 | 
-
+| USDC         | USD Coin       | 0xf555F8d9Cf90f9d95D34488e6C852796D9acBd31 | 
+| USDT         | Tether USD     | 0x747A4168DB14F57871fa8cda8B5455D8C2a8e90a | 
+| DAI          | Dai Stablecoin | 0x6Dcc603fdbC7B0847b66aB04F4fB4C668bC6cAA6 | 
 
 ### Polygon zkEVM 1101
 
