hotfix/tree-shaking

--- a/docs/Modules/BatchedSession.mdx
+++ b/docs/Modules/BatchedSession.mdx
@@ -67,7 +67,7 @@ import TabItem from "@theme/TabItem";
 
 ```bash
 
-npm install @biconomy/account/modules
+npm install @biconomy/account
 
 ```
 
@@ -76,7 +76,7 @@ npm install @biconomy/account/modules
 
 ```bash
 
-yarn add @biconomy/account/modules
+yarn add @biconomy/account
 
 ```
 
@@ -85,7 +85,7 @@ yarn add @biconomy/account/modules
 
 ```bash
 
-pnpm add @biconomy/account/modules
+pnpm add @biconomy/account
 
 ```
 
