--- a/docs/Paymaster/integration.mdx
+++ b/docs/Paymaster/integration.mdx
@@ -17,21 +17,21 @@ import TabItem from "@theme/TabItem";
 <TabItem value="js" label="npm">
 
 ```bash
-npm install @biconomy/account/paymaster
+npm install @biconomy/account
 ```
 
 </TabItem>
 <TabItem value="py" label="yarn">
 
 ```bash
-yarn add @biconomy/account/paymaster
+yarn add @biconomy/account
 ```
 
 </TabItem>
 <TabItem value="java" label="pnpm">
 
 ```bash
-pnpm add @biconomy/account/paymaster
+pnpm add @biconomy/account
 ```
 
 </TabItem>
