--- a/docs/Bundler/integration.mdx
+++ b/docs/Bundler/integration.mdx
@@ -19,7 +19,7 @@ import TabItem from "@theme/TabItem";
 
 ```bash
 
-npm install @biconomy/account/bundler
+npm install @biconomy/account
 
 ```
 
@@ -28,7 +28,7 @@ npm install @biconomy/account/bundler
 
 ```bash
 
-yarn add @biconomy/account/bundler
+yarn add @biconomy/account
 
 ```
 
@@ -37,7 +37,7 @@ yarn add @biconomy/account/bundler
 
 ```bash
 
-pnpm add @biconomy/account/bundler
+pnpm add @biconomy/account
 
 ```
 
@@ -54,7 +54,7 @@ pnpm add @biconomy/account/bundler
 To create a bundler instance pass the bundler url, with other optional params.
 
 ```typescript
-import { create } from "@biconomy/account/bundler";
+import { create } from "@biconomy/account";
 
 const userOpReceiptMaxDurationIntervals: { [key in number]?: number } = {
   [80002]: 60000,
